--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,10 @@ body {
     text-align: center;
     background-image:
             linear-gradient(to bottom, rgba(0,0,0,0) 0%, #1f2223 100%),
-            url("../photos/bg.png"); no-repeat center center / cover;
+            url("../photos/bg.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
 }
 
@@ -213,3 +216,4 @@ h1 {
     max-height: 90%;
     border-radius: 6px;
 }
+
