--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,23 @@ h1 {
     text-align: center;
 }
 
+
+#clear-btn {
+    display: inline-block !important;
+    margin: 4px !important;
+    padding: 6px 14px !important;
+    border-radius: 4px !important;
+    border: none !important;
+    background-color: #024C3D !important;
+    color: #fff !important;
+    cursor: pointer !important;
+    font-size: 14px !important;
+}
+
+#clear-btn:hover {
+    background-color: darkslategray !important;
+}
+
 #search-input {
     display: block;
     margin: 0 auto 12px auto;
@@ -216,4 +233,5 @@ h1 {
     max-height: 90%;
     border-radius: 6px;
 }
+
 
