--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ a { text-decoration: none; color: #fff; }
 .logo-container { display: flex; align-items: center; gap: 10px; }
 .logo { width: auto; height: 24px; background-color: white; padding: 5px}
 .site-title { font-size: 12px; font-weight: 600; }
-.top-nav a { margin-left: 20px; color: #bbb; font-weight: 500; transition: color 0.2s; font-size: 12px; }
+.top-nav img { margin-left: 20px; height: 24px; max-height: 100%; width: auto; }
 .top-nav a:hover { color: #fff; }
 
 /* ===== 主体布局 ===== */
