--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,9 @@ a { text-decoration: none; color: #fff; }
 .logo-container { display: flex; align-items: center; gap: 10px; }
 .logo { width: auto; height: 24px; background-color: white; padding: 5px}
 .site-title { font-size: 12px; font-weight: 600; }
-.top-nav img { margin-left: 20px; height: 24px; max-height: 100%; width: auto; }
-.top-nav a:hover { color: #fff; }
+.top-nav  {display: flex; align-items: center;}
+.top-nav img {height: 24px; width: auto; margin-left: 20px}
+.top-nav img:hover { color: #fff; }
 
 /* ===== 主体布局 ===== */
 .main-container {
